Fixing RnderFrameHost::ViewSource() for ExtensionOptionsGuest.

After r512625, various ways of viewing page or frame source end up going
through RenderFrameHost::ViewSource which depends on ability to present
the view source WebContents to the user via WebContentsDelegate's
AddNewContent method.  This method was not overriden by
ExtensionOptionsGuest, leading to https://crbug.com/796080.

This CL fixes https://crbug.com/796080 by overriding
ExtensionOptionsGuest::AddNewContent and making it forward the call to
the embedder.  This CL also adds a regression test for this scenario.

Note that by default guest views cannot open new windows - this is
blocked (unless the embedder explicitly allows this) and results
in "<webview>: A new window was blocked." error message.  This CL
does not change this - window.open('<url>', '_blank') as well
as <a target="_blank"...> in a guest view will continue to be
blocked by default.

Bug: 796080
Change-Id: I83ece7fc94bbf1005c5e2878159076949c48b076