extensions/browser/guest_view/extension_options/extension_options_guest.cc
@@ -152,6 +152,17 @@ void ExtensionOptionsGuest::OnPreferredSizeChanged(const gfx::Size& pref_size) {
       options.ToValue()));
 }
 
+void ExtensionOptionsGuest::AddNewContents(WebContents* source,
+                                           WebContents* new_contents,
+                                           WindowOpenDisposition disposition,
+                                           const gfx::Rect& initial_rect,
+                                           bool user_gesture,
+                                           bool* was_blocked) {
+  embedder_web_contents()->GetDelegate()->AddNewContents(
+      source, new_contents, disposition, initial_rect, user_gesture,
+      was_blocked);
+}
+
 WebContents* ExtensionOptionsGuest::OpenURLFromTab(
     WebContents* source,
     const content::OpenURLParams& params) {
